fixed the footer bottom padding issue and started work on the navbar to be collapsable

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,8 @@ nav{
   background-color: #9de19a;
 }
 
- .navbar{
-      padding: 0px 0px 0px 0px;
+.navbar{
+  padding: 0px 0px 0px 0px;
 }
 .nav-link{
 padding: 20px;
@@ -42,7 +42,7 @@ a, a:hover {
 
 aside{
     background-color: #98a7f2;
-    font-size: 1.5vw;
+    font-size: 2vw;
 }
 aside ul{
  padding-left: 10px;
@@ -103,5 +103,6 @@ text-align: center;
   margin-top: 100px;
   height: 40px;
   background-color: #6c757d;
-  padding-top: 8px;
+  padding: 10px 30px;
+  padding-bottom: 50px;
 }
